Bug 810637 - Memory leak and message DB corruption when saving Received header. r=rkent